--- a/css/Stylesheet.css
+++ b/css/Stylesheet.css
@@ -34,8 +34,8 @@ h5, .h5 {
 h6, .h6 {
 	font-size: 14px;
 }
-	
-	
+
+
 
 .aufbereitung5050 {
 	padding-left: 0px;
@@ -63,7 +63,7 @@ h6, .h6 {
 	width:500px;
 	height:500px;
 }
-	
+
 /* Try to fix this xD */
 
 body {
@@ -106,16 +106,16 @@ body {
 	nav a:hover {
 		border-bottom: 3px solid #8EE875;
 	}
-	
-	
-	
+
+
+
 	.con{
 	display: flex;
 	justify-content: space-around;
 	flex-basis: 20%;
 	width: 100%;
 	}
-	
+
 	#con1{
 		flex-grow: 2;
 		padding: 20px;
@@ -124,7 +124,7 @@ body {
 		margin-left: 10%;
 		margin-right: 10%;
 	}
-	
+
 	#con2{
 		flex-grow: 1;
 		margin-top: 30px;
@@ -132,20 +132,20 @@ body {
 		margin-right: 10%;
 	}
 	/* Einleitung */
-	
+
 	#start{
 		background: #292929;
-		padding: 10px;	
-			
+		padding: 10px;
+
 	}
-	
+
 	#start p{
 		text-align: center;
 		font-weight: bold;
 		font-family: 'Noto Sans HK', sans-serif;
 		font-size: 40px;
 		}
-	
+
 
 	.tippszu {
 		display: flex;
@@ -239,12 +239,12 @@ body {
 	.tippszu .bildle:nth-child(3) {
 		background: url("../img/1.png") center;
 	}
-	
+
 	.ueber1 h1 a{
 		text-decoration: none;
 		color: white;
 	}
-	#stleft{ 
+	#stleft{
 		background: #e6D690;
 		margin-top: -16px;
 		padding: 40px 30px 20px 30px;
@@ -278,7 +278,7 @@ body {
 		background: #cea06c;
 		color: #fff;
 	}
-	
+
 	.about-area {
 		background: #f7f7f7;
 	}
@@ -320,51 +320,6 @@ body {
 			color:#4b4c4d;
 		}
 
-		.footer-basic ul {
-			padding:0;
-			list-style:none;
-			text-align:center;
-			font-size:18px;
-			line-height:1.6;
-			margin-bottom:0;
-		}
-
-		.footer-basic li {
-			padding:0 10px;
-		}
-
-		.footer-basic ul a {
-			color:inherit;
-			text-decoration:none;
-			opacity:0.8;
-		}
-
-		.footer-basic ul a:hover {
-			opacity:1;
-		}
-
-		.footer-basic .social {
-			text-align:center;
-			padding-bottom:25px;
-		}
-
-		.footer-basic .social > a {
-			font-size:24px;
-			width:40px;
-			height:40px;
-			line-height:40px;
-			display:inline-block;
-			text-align:center;
-			border-radius:50%;
-			border:1px solid #ccc;
-			margin:0 8px;
-			color:inherit;
-			opacity:0.75;
-		}
-
-		.footer-basic .social > a:hover {
-			opacity:0.9;
-		}
 
 		.footer-basic .copyright {
 			margin-top:15px;
@@ -372,24 +327,38 @@ body {
 			font-size:13px;
 			color:#aaa;
 			margin-bottom:0;
+
+		}
+
+
+		.footer {
+			margin-top:40px;
+			text-align:center;
+			font-size:13px;
+			color:#aaa;
+			position: absolute;
+			bottom: 0;
+			width: 100%;
+			height: 2.5rem;
+
 		}
 		/* Blog */
-	
 
-		.el {	
+
+		.el {
 			transition: max-height 1.5s;
 			overflow: hidden;
 			max-height: 0;}
-				
-		.highlight { 
+
+		.highlight {
 			max-height: var(--max-height);
-			
+
 		}
-		.highlight2 { 
+		.highlight2 {
 			max-height: var(--max-height);
-			
+
 		}
-			
+
 		.trigger{
 			margin: 0;
 			padding: 40px;
@@ -403,7 +372,7 @@ body {
 		}
 		.trigger p{
 			text-align: left;
-			
+
 		}
 
 		.trigger2{
@@ -419,7 +388,7 @@ body {
 		}
 		.trigger2 p{
 			text-align: left;
-			
+
 		}
 
 
@@ -428,20 +397,20 @@ body {
 			height: 550px;
 			margin: 30px;
 		}
-		
+
 		#ueb{
 			font-size: 104px;
 			color: black;
 			font-family: 'Permanent Marker', cursive;
 			transform: rotate(-8deg);
 			}
-			
+
 		#clickme{
 			font-size: 25px;
 			color: white;
 			font-family: 'Permanent Marker', cursive;
 		}
-		
+
 		#imauto{
 			text-align: left;
 			color: black;
@@ -463,20 +432,20 @@ body {
 			color: gray;
 			font-weight: bold;
 		}
-		
+
 		.item1{/* MP-Wash*/
 			order: 1;
 			flex: 1;
 			margin: 20px;
 			padding-left:100px;
 			}
-			
+
 			.item1 h1{
 				text-align: center;
 				font-size: 45px;
 				margin-right: 40px;
 			}
-			
+
 		.item2{/* Text 1*/
 			order: 2;
 			font-size: 18px;
@@ -484,7 +453,7 @@ body {
 			margin: 30px;
 			text-align: block;
 			}
-			
+
 			.item2 table{
 			float: right;
 			margin-right: 25%;
@@ -502,23 +471,23 @@ body {
 			flex: 1 ;
 			margin: 10px;
 			}
-			
+
 		.item4{/* Text 2*/
 			order: 3;
 			font-size: 18px;
 			flex: 2;
 			margin: 20px 15px 20px 20px;
-			
+
 			}
-		
+
 		.mycontainer{
 			display: flex;
 			justify-content: flex-start;
 			flex-wrap: wrap;
 			align-items: center;
 			flex-direction: row;
-		}		
-		
+		}
+
 		.section-heading
 		{
 			font-size:36px;
@@ -534,12 +503,12 @@ body {
 		.space{
 			margin-top:35px ;
 		}
-		
+
 		.space div div div h1{
 			text-align: center;
 			font-size: 60px;
 		}
-		
+
 		.selectcss select{
 			position: relative;
 			width: 200px;
@@ -575,8 +544,8 @@ body {
 		.fa select option {
 			color: #666;
 		}
-		
-		
+
+
 		.butt button{
 			margin: 10px 30px 15px 30px;
 			position: relative;
@@ -598,7 +567,7 @@ body {
 			stroke-dasharray: 0, 0, 480px, 480px;
 			stroke-width: 8;
 			transition: stroke-dasharray .3s;
-			
+
 		}
 
 		.butt span {
@@ -609,20 +578,20 @@ body {
 			width: 100%;
 			line-height: 60px;
 			letter-spacing: 4px;
-			
+
 		}
 		#Gesamtmenge{margin:5px -5px 10px 35px;}
 		.butt:hover, .butt:focus {
 			color: #ecf0f1;
-			
+
 		}
 
-		.butt:hover svg, 
+		.butt:hover svg,
 		.butt:focus svg {
 		stroke-dasharray: 180px, 300px;
 		}
-	
-	
+
+
 	input[type="text"] {
 		box-sizing: border-box;
 		width: 80px;
@@ -636,10 +605,10 @@ body {
 		outline: none;
 		float: center;
 	}
-	
-	
+
+
 	/* Bootssnipp [https://bootsnipp.com/snippets/O5yMd]*/
-	
+
 	.demo{padding:45px 0}
 	.product-grid2{font-family:'Open Sans',sans-serif;position:relative}
 	.product-grid2 .product-image2{overflow:hidden;position:relative}
@@ -672,9 +641,9 @@ body {
 	@media screen and (max-width:990px){.product-grid2{margin-bottom:30px}
 	}
 	.wasdienedgeschafthaben{align-items: stretch;margin-top: 230px;}
-	
+
 	.proncon{
-		
+
 		max-width: 600px;
 		height: 320px;
 		border-collapse: collapse;
@@ -682,7 +651,7 @@ body {
 		margin: 50px auto;
 		background: white;
 	}
-	
+
 	.proncon th{
 		background: steelblue;
 		height: 54px;
@@ -695,16 +664,16 @@ body {
 		transition: all 0.2s;
 		text-align: center;
 	}
-	
-	
+
+
 	 a
 	{
 		list-style: none;
 	}
-	
+
 	.proncon tr{
 		border-bottom: 1px solid #cccccc;
-	
+
 	}
 	.proncon tr:last-child{
 		border-bottom: 0px;
@@ -713,13 +682,13 @@ body {
 		border-right: 1px solid #cccccc;
 			padding: 10px;
 			transition: all 0.2s;
-			
+
 	}
 	.proncon td li{
 			margin-top: 5px;
-				
+
 		}
-	
+
 	.proncon td:last-child {
 		border-right: 0px;
 	}
@@ -733,7 +702,7 @@ body {
 				margin-top: 70px;
 				margin-bottom: 50px;
 			}
-			
+
 	#xx{
 		font-size: 72px;
 		color: black;
@@ -748,12 +717,12 @@ body {
 			transform: rotate(-5deg);
 
 		}
-	
+
 	.thumbnail2 {
 		position: relative;
 		display: inline-block;
 	}
-	
+
 	#caption2 {
 		position: absolute;
 		top: 9%;
@@ -762,7 +731,7 @@ body {
 		text-align: center;
 		font-weight: bold;
 	}
-	
+
 	#caption3{
 		position: absolute;
 		top: 9%;
@@ -775,7 +744,7 @@ body {
 	#lastueber h1,h2{
 		font-family: Arial;
 		text-align: center;
-	
+
 	}
 	#kkk{
 		background: steelblue;
