--- a/css/Stylesheet.css
+++ b/css/Stylesheet.css
@@ -8,8 +8,10 @@
 	margin-top: 0;
 	font-family: "Poppins", sans-serif;
 	font-weight: 600;
-	color: #222222;
+	color: #222222;	
 }
+
+	
 
 h1, .h1 {
 	font-size: 36px;
@@ -35,7 +37,14 @@ h6, .h6 {
 	font-size: 14px;
 }
 
+h7, .h7 {
+	font-size: 30px;
+	text-decoration: underline;
+}
 
+a.one {
+	font-size: 50px;
+}
 
 .aufbereitung5050 {
 	padding-left: 0px;
@@ -157,7 +166,7 @@ body {
 		justify-content: center;
 		align-items: center;
 		height: 100vh;
-		width: 100vw;
+		width: 99vw;
 	}
 	.tippszu:hover > .section {
 		filter: brightness(22%);
@@ -649,7 +658,8 @@ body {
 	.product-grid2 .price{color:#303030;font-size:15px}
 	@media screen and (max-width:990px){.product-grid2{margin-bottom:30px}
 	}
-	.wasdienedgeschafthaben{align-items: stretch;margin-top: 230px;}
+	.wasdienedgeschafthaben{align-items: stretch;margin-top: 50px;}
+	.currentposition{margin-top:50px; text-align: center;}
 
 	.proncon{
 
