--- a/css/Stylesheet.css
+++ b/css/Stylesheet.css
@@ -12,7 +12,6 @@
 }
 
 
-
 h1, .h1 {
 	font-size: 36px;
 }
@@ -44,6 +43,10 @@ h7, .h7 {
 
 a.one {
 	font-size: 50px;
+}
+
+a.navi {
+	font-size: 22px;
 }
 
 .aufbereitung5050 {
@@ -91,7 +94,8 @@ body {
 
 	.logo img{
 		float:left;
-		width: 154px;
+		width: 120px;
+		height: 100px;
 	}
 
 	nav ul {
@@ -659,7 +663,7 @@ body {
 	@media screen and (max-width:990px){.product-grid2{margin-bottom:30px}
 	}
 	.wasdienedgeschafthaben{align-items: stretch;margin-top: 50px;}
-	.currentposition{margin-top:50px; text-align: center;}
+	.currentposition{margin-top:30px; text-align: center;}
 
 	.proncon{
 
