--- a/css/Stylesheet.css
+++ b/css/Stylesheet.css
@@ -635,8 +635,8 @@ body {
 	.product-grid2{font-family:'Open Sans',sans-serif;position:relative}
 	.product-grid2 .product-image2{overflow:hidden;position:relative}
 	.product-grid2 .product-image2 a{display:block}
-	.product-grid2 .product-image2 img{width:100%;height:auto}
-	.product-image2 .pic-1{opacity:1;transition:all .5s}
+	.product-grid2 .product-image2 img{height:250px}
+	.product-image2 .pic-1{width:100%; height:100%; opacity:1;transition:all .5s}
 	.product-grid2:hover .product-image2 .pic-1{opacity:0}
 	.product-image2 .pic-2{width:100%;height:100%;opacity:0;position:absolute;top:0;left:0;transition:all .5s}
 	.product-grid2:hover .product-image2 .pic-2{opacity:1}
