--- a/css/Stylesheet.css
+++ b/css/Stylesheet.css
@@ -70,6 +70,12 @@ a.navi {
 	color: black;
 }
 
+#Danksagung {
+	font-size:60px;
+	text-align: center;
+	padding-top: 15%;
+}
+
 .AbklebenUndPoliturerbsen {
 	margin-left:50px;
 	width:500px;
