--- a/css/Stylesheet.css
+++ b/css/Stylesheet.css
@@ -345,6 +345,9 @@ body {
 			padding:10px 0;
 			background-color:#ffffff;
 			color:#4b4c4d;
+			font-size:13px;
+			color:#aaa;
+			text-align: center
 		}
 
 
