--- a/css/Stylesheet.css
+++ b/css/Stylesheet.css
@@ -77,6 +77,13 @@ a.navi {
 	padding-top: 15%;
 }
 
+#PrintButton {
+	float:right;
+	margin-right:80px;
+	font-size: 20px;
+
+}
+
 .AbklebenUndPoliturerbsen {
 	margin-left:50px;
 	width:500px;
