--- a/css/Stylesheet.css
+++ b/css/Stylesheet.css
@@ -1083,3 +1083,23 @@ input[type=submit]:hover {
   margin: auto;
   width: 50%;
 }
+
+* {
+  box-sizing: border-box;
+}
+
+/* Create two equal columns that floats next to each other */
+.column {
+  float: left;
+  width: 50%;
+  padding: 10px;
+  height: 300px;
+  /* Should be removed. Only for demonstration */
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
