--- a/Frontend/css/Stylesheet.css
+++ b/Frontend/css/Stylesheet.css
@@ -1028,8 +1028,14 @@ th {
     }
 
 .buttonchange {
-  background-color: white;
-  border: 1px;
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
 
 }
 
@@ -1037,7 +1043,7 @@ th {
     {
 
     cursor: pointer;
-    background-color: lightgrey; /* Neue Farbe */
+
     }
 
 .button1 {
